--- a/uj/index.html
+++ b/uj/index.html
@@ -36,12 +36,12 @@
 <summary class="h3">Semestr zimowy 2024/2025</summary>
 
 <ul>
-	<li><a href="uj/zajecia/24-25z/assk">Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</a></li>
-	<li><!--a href="uj/zajecia/24-25z/itas"-->Introduction to Asian Studies: overview of research methods<!--/a--></li>
-	<li><a href="uj/zajecia/24-25z/klc2">Korean Language Class (2)</a></li>
-	<li><a href="uj/zajecia/24-25z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
-	<li><a href="uj/zajecia/24-25z/wats3-1">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</a></li>
-	<li><a href="uj/zajecia/24-25z/wats3-2">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</a></li>
+	<li>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</li>
+	<li>Introduction to Asian Studies: overview of research methods</li>
+	<li>Korean Language Class (2)</li>
+	<li>Lektorat języka koreańskiego - poziom 4</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</li>
 </ul>
 </details>
 
@@ -49,8 +49,8 @@
 <summary class="h3">Semestr letni 2023/2024</summary>
 
 <ul>
-	<li><a href="uj/zajecia/23-24l/ljk5">Lektorat języka koreańskiego - poziom 5</a></li>
-	<li><a href="uj/zajecia/23-24l/mkmb">Modern Korean in Media and Business (Upper-intermediate)</a></li>
+	<li>Lektorat języka koreańskiego - poziom 5</li>
+	<li>Modern Korean in Media and Business (Upper-intermediate)</li>
 </ul>
 </details>
 
@@ -58,10 +58,10 @@
 <summary class="h3">Semestr zimowy 2023/2024</summary>
 
 <ul>
-	<li><a href="uj/zajecia/23-24z/itas">Introduction to Asian Studies: overview of research methods</a></li>
-	<li><a href="uj/zajecia/23-24z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
-	<li><a href="uj/zajecia/23-24z/wats3-1">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</a></li>
-	<li><a href="uj/zajecia/23-24z/wats3-2">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</a></li>
+	<li>Introduction to Asian Studies: overview of research methods</li>
+	<li>Lektorat języka koreańskiego - poziom 4</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</li>
 </ul>
 </details>
 
@@ -69,9 +69,9 @@
 <summary class="h3">Semestr letni 2022/2023</summary>
 
 <ul>
-	<li><a href="uj/zajecia/22-23l/ljk5">Lektorat języka koreańskiego - poziom 5</a></li>
-	<li><a href="uj/zajecia/22-23l/pikt">Porównywanie i kontrastowanie tekstów polskich i koreańskich przy wykorzystaniu technik komputerowych</a></li>
-	<li><a href="uj/zajecia/22-23l/wats5">Warsztaty analizy tekstów specjalistycznych poz. 5</a></li>
+	<li>Lektorat języka koreańskiego - poziom 5</li>
+	<li>Porównywanie i kontrastowanie tekstów polskich i koreańskich przy wykorzystaniu technik komputerowych</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 5</li>
 </ul>
 </details>
 
@@ -79,8 +79,8 @@
 <summary class="h3">Semestr zimowy 2022/2023</summary>
 
 <ul>
-	<li><a href="uj/zajecia/22-23z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
-	<li><a href="uj/zajecia/22-23z/wats5">Warsztaty analizy tekstów specjalistycznych poz. 5</a></li>
+	<li>Lektorat języka koreańskiego - poziom 4</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 5</li>
 </ul>
 </details>
 
@@ -88,9 +88,9 @@
 <summary class="h3">Semestr letni 2021/2022</summary>
 
 <ul>
-	<li><a href="uj/zajecia/21-22l/hpkp">Historia polityczna Korei Południowej po 1988 roku</a></li>
-	<li><a href="uj/zajecia/21-22l/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
-	<li><a href="uj/zajecia/21-22l/wats2">Warsztaty analizy tekstów specjalistycznych poz. 2</a></li>
+	<li>Historia polityczna Korei Południowej po 1988 roku</li>
+	<li>Lektorat języka koreańskiego - poziom 4</li>
+	<li>Warsztaty analizy tekstów specjalistycznych poz. 2</li>
 </ul>
 </details>
 
