--- a/uj/zajecia/24-25z/itas/index.html
+++ b/uj/zajecia/24-25z/itas/index.html
@@ -188,7 +188,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 5</td>
-				<td class="schedule-presentation">Jaeseung Seo</td>
+				<td class="schedule-presentation">Jaeseung Seo - Korean Civil Revolution after the Korean War</td>
 			</tr>
 		</tbody>
 		<tbody>
