--- a/uj/zajecia/24-25z/wats3-1/pracedomowe/1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/pracedomowe/1/index.html
@@ -9,23 +9,133 @@
 	<link rel="icon" href="data:,">
 	<link rel="stylesheet" href="uj/.res/all.css">
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
+	<script src="uj/.res/all.js"></script>
 </head><body class="home">
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</h1>
 
-<h2></h2>
+<h2>Kinga Majcherczyk - nagroda Nobla dla Han Gang</h2>
 
 <h3>어휘</h3>
 
 <ul>
+	<li>완판 - wyprzedany</li>
+	<li>창고 - magazyn</li>
+	<li>재고 - asortyment</li>
+	<li>꺼내다 - wyciągnąć/opróżnić</li>
+	<li>인쇄소 - drukarnia</li>
+	<li>풀 가동 - praca na pełnych obrotach</li>
+	<li>교보문고 - księgarnia Kyobo</li>
+	<li>안내판 - tablica ogłoszeń</li>
+	<li>세워지다 - zostać postawionym</li>
+	<li>폐점 - zamknięcie/likwidacja (np. sklepu)</li>
+	<li>작품 - dzieło</li>
+	<li>올려놓다 - umieścić</li>
+	<li>특별하다 - być wyjątkowym</li>
+	<li>진열대 - stojak wystawowy / stoisko wystawowe</li>
+	<li>쌓이다 - gromadzić się</li>
+	<li>‘여수의 사랑’ - „Miłość Yeosu”</li>
+	<li>시민들 - obywatele/mieszkańcy</li>
+	<li>쓸어 담다 - wykupić</li>
+	<li>인근 - okolica/pobliże</li>
+	<li>희귀본 - rzadkie wydanie/wersja</li>
+	<li>풀리다 - pojawić się</li>
+	<li>소식 - informacja</li>
+	<li>야근하다 - pracować po nocach</li>
+	<li>부리나케 - w pośpiechu</li>
+	<li>외 - poza</li>
+	<li>‘희랍어 시간’ - „Lekcje greki”</li>
+	<li>‘채식주의자’ - „Wegetarianka”</li>
+	<li>‘흰’ - „Biała Elegia”</li>
 </ul>
 
 <h3>번역</h3>
 
+<p>0. 한강 책 ‘완판’...창고 재고 꺼내고, 인쇄소 ‘풀 가동’</p>
+<p>0. Wyprzedana Han Kang - książki wyciągane są z magazynów, a drukarnie pracują „na pełnych obrotach”</p>
+<p>1. 11일 밤 9시 30분 서울 광화문 교보문고에 이런 안내판이 세워졌다.</p>
+<p>1. 11 października o 21.30 w seulskiej księgarni Kyobo przy Placu Gwanghwamun została postawiona tablica z takim właśnie ogłoszeniem.</p>
+<p>2. 폐점을 30분 앞둔 시각.</p>
+<p>2. Było to 30 minut przed zamknięciem lokalu.</p>
+<p>3. 한강 작품을 올려놓은 특별 진열대에 쌓인 ‘여수의 사랑’을 시민들이 쓸어 담고 있었다.</p>
+<p>3. Klienci zabierali właśnie kopie „Miłości Yeosu”, które były wystawie przeznaczonej specjalnie na dzieła Han Gang.</p>
+<p>4. 광화문 인근 직장인 윤모 씨는 “희귀본이 풀렸다는 소식을 듣고 야근하다 부리나케 달려왔다”고 했다.</p>
+<p>4. Pracownik biura w okolicy Gwanghwamun, pan Yoon powiedział: „Gdy tylko usłyszałem informację o wystawionym na sprzedaż rzadkim wydaniu książki, przerwałem nocną pracę i przyszedłem tutaj”.</p>
+<p>5. ‘여수의 사랑’ 외에는 ‘희랍어 시간’ ‘채식주의자’ ‘흰’ 등 영어 번역본만 남아 있었다.</p>
+<p>5. Poza „Miłością Yeosu” pozostały tylko angielskie tłumaczenia „Lekcji greki”, „Wegetarianki” i „Białej Elegii”.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>판본 - wydanie</li>
+	<li>문학과지성사 - wydawnictwo Moonji Publishing</li>
+	<li>명작선 - arcydzieło</li>
+	<li>시리즈 - seria</li>
+	<li>온·오프라인 - online i offline</li>
+	<li>판매 - sprzedaż</li>
+	<li>판 - edycja/wydanie</li>
+	<li>절판본 - wyczerpany nakład</li>
+	<li>일환 - część (czegoś)</li>
+	<li>개정판 - wydanie poprawione</li>
+	<li>구판 - stara edycja</li>
+	<li>출판사 - wydawnictwo</li>
+	<li>모시다 - dbać (o kogoś/coś)</li>
+	<li>표지 - okładka</li>
+	<li>가장자리 - brzegi</li>
+	<li>살짝 - nieznacznie</li>
+	<li>띄다 - pojawić się</li>
+	<li>묵다 - być starym</li>
+	<li>세월 - czas</li>
+	<li>흔적 - ślad/pozostałość</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>6. 이 판본은 문학과지성사(문지)에서 나온 ‘소설 명작선’ 시리즈.</p>
+<p>6. To wydanie pojawiło się w serii "Powieść - Arcydzieło" wydawnictwa Moonji Publishing.</p>
+<p>7. 최근 온·오프라인 서점에서 판매되지 않았던 2017년 판 절판본이다.</p>
+<p>7. Jest to wydanie z 2017 roku, którego nakład jest wyczerpany i w ostatnim czasie nie można go było już kupić ani w księgarniach stacjonarnych, ani w Internecie.</p>
+<p>8. 문지에서 한강 시리즈의 일환으로 2018년 이 책 개정판을 내면서 구판은 서점과 출판사 창고에 고이 모셔져 있었다.</p>
+<p>8. Po publikacji przez Moonji wydania poprawionego w 2018 roku jako część serii książek Han Gang starsze wydanie kurzyło się w księgarniach i magazynach należących do wydawnictwa.</p>
+<p>9. 하얀 표지 가장자리가 살짝 누런빛을 띄었다.</p>
+<p>9. Brzegi na białych okładkach książek są pożółkłe.</p>
+<p>10. 묵은 세월의 흔적이다.</p>
+<p>10. Grzbiet zaś nosi pozostałości czasu.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>편집주간 -  redaktor naczelny</li>
+	<li>보유하다 - być w posiadaniu</li>
+	<li>물량 - zaopatrzenie</li>
+	<li>다수 - większość</li>
+	<li>일부 - część</li>
+	<li>추가돼다 - być dodanym</li>
+	<li>측 - strona</li>
+	<li>요청하다 - mieć prośbę</li>
+	<li>수상 - nagroda</li>
+	<li>판매량 - sprzedaż (liczba sprzedanych sztuk)</li>
+	<li>훌쩍 넘기다 - znacznie przekroczyć</li>
+	<li>품귀 현상 - towar deficytowy</li>
+	<li>소진 - wyczerpanie, wyprzedanie</li>
+	<li>상태 - stan, sytuacja</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>11-1. 이근혜 문학과지성사 편집주간은 “교보문고가 재고로 보유하고 있던 물량이 다수고 출판사 재고가 일부 추가됐다”며</p>
+<p>11-1. Lee Geunhye, główna redaktor Moonji Publishing, powiedziała: „Większość książek pochodzi z magazynów Księgarni Kyobo, a kolejna część została dodana z magazynów wydawnictwa”</p>
+<p>11-2.“교보문고 측에서 ‘한강 선생님 책 뭐든지 좋으니 재고가 있으면 달라’는 요청도 있었다”고 했다.</p>
+<p>11-2. oraz „Ze strony księgarni Kyobo pojawiła się także prośba: »Chętnie przyjmiemy każdą książkę pani Han Kang, więc jeśli posiadacie jakieś w magazynach prosimy o ich dostarczenie«”.</p>
+<p>12. ‘완판’이라는 말은 이런 때 쓰는 것이다.</p>
+<p>12. w takich sytuacjach „towar wyprzedany” jest dobrym określeniem.</p>
+<p>13. 수상 소식이 전해지고 책 판매량이 하루 만에 30만부를 훌쩍 넘기면서 ‘한강 책 품귀 현상’을 넘어 ‘재고 완전 소진’ 상태다.</p>
+<p>13. Od czasu pojawienia się informacji o otrzymaniu nagrody liczba sprzedanych książek przekroczyła 300000 kopii dziennie. Jesteśmy w sytuacji, w której „książki Han Kang są towarem deficytowym”, a „magazyny zostały całkowicie wyczyszczone”.</p>
+
 <h3>Źródło:</h3>
 
 <ul>
-	<li></li>
+	<li><a href="https://n.news.naver.com/mnews/article/023/0003863674">https://n.news.naver.com/mnews/article/023/0003863674</a></li>
 </ul>
 
 </body></html>
