--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -75,16 +75,13 @@
 			<tr>
 				<th scope="row">6</th>
 				<td>29 listopada 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 6</td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/4">04. 세종학당이 어디에 있어요?</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">7</th>
 				<td>6 grudnia 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 7</td>
 			</tr>
 		</tbody>
 		<tbody>
