--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/1/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/1/index.html
@@ -9,11 +9,12 @@
 	<link rel="icon" href="data:,">
 	<link rel="stylesheet" href="uj/.res/all.css">
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
+	<script src="uj/.res/all.js"></script>
 </head><body class="home">
 
-<h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</h1>
+<h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2></h2>
+<h2>Noemi Matuszczak - powodzie</h2>
 
 <h3>어휘</h3>
 
