--- a/uj/zajecia/25-26z/klc3/lectures/speaking/1/index.html
+++ b/uj/zajecia/25-26z/klc3/lectures/speaking/1/index.html
@@ -2,107 +2,70 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>한국어 3급</title>
+	<title>Korean Language Class (3)</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
 	<link rel="icon" href="data:,">
-	<link rel="stylesheet" media="all" href="viiilo/.res/all.css">
-	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
+	<link rel="stylesheet" media="all" href="uj/.res/all.css">
+	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Korean Language Class (3)<br><br>1과. 성격이 참 좋아 보여요</h1>
-
-<h2>교과서</h2>
+<h1>Korean Language Class (3) - 말하기<br><br>1과. 성격이 참 좋아 보여요</h1>
 
 <ul>
 	<li>
-		<div>1번 듣기</div>
+		<div>001</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr001.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr001.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>2번 듣기</div>
+		<div>002</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr002.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr002.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>3번 듣기</div>
+		<div>003</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr003.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr003.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>4번 듣기</div>
+		<div>004</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr004.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr004.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>5번 듣기</div>
+		<div>005</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr005.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr005.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>6번 듣기</div>
+		<div>006</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr006.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr006.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>7번 듣기</div>
+		<div>007</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr007.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr007.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>8번 듣기</div>
+		<div>008</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr008.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr008.mp3"></audio>
 		</div>
 	</li>
 	<li>
-		<div>9번 듣기</div>
+		<div>009</div>
 		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화_4_Tr009.mp3"></audio>
-		</div>
-	</li>
-</ul>
-
-<h2>익힘책</h2>
-
-<ul>
-	<li>
-		<div>1번 듣기</div>
-		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화익힘책_1_발음해요_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>2번 듣기</div>
-		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화익힘책_1_발음해요_2.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>3번 듣기</div>
-		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화익힘책_1_발음해요_3.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>4번 듣기</div>
-		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화익힘책_1_확인해요_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>5번 듣기</div>
-		<div>
-			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/세종한국어회화익힘책_1_확인해요_2.mp3"></audio>
+			<audio controls src="uj/zajecia/25-26z/klc3/lectures/speaking/1/files/4_Tr009.mp3"></audio>
 		</div>
 	</li>
 </ul>
