--- a/uj/zajecia/24-25z/wats3-1/zajecia/8/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/8/index.html
@@ -43,11 +43,26 @@
 <h3>번역</h3>
 
 <p>0. 강추위엔 국밥이 `국룰`…덜 짜게 먹으려면</p>
+<ul>
+	<li>Niepisana zasada jedzenia zupa z ryżem na mroźne dni - jak ograniczyć spożycie soli?</li>
+</ul>
 <p>1. 날씨가 추워지면서 국물 요리를 찾게 된다.</p>
+<ul>
+	<li>Wraz ze spadkiem temperatury na zewnątrz Koreańczycy skłaniają się ku zupom.</li>
+</ul>
 <p>2. 요즘 직장 근처 국밥집들은 점심시간만 되면 문밖까지 대기줄이 길다.</p>
+<ul>
+	<li>W ostatnich dniach w pobliżu biurowców, gdy tylko nastanie przerwa na lunch, pod drzwiami restauracji serwujących zupę z ryżem ustawiają się długie kolejki.</li>
+</ul>
 <p>3. 해장국, 미역국, 추어탕, 돼지국밥 등은 한파 추위에 선호하는 음식으로 꼽힌다.</p>
+<ul>
+	<li>Najczęściej wybieranymi daniami w te zimne dni są <i>haejangguk</i> („zupa na kaca”), <i>miyeokguk</i> (zupa z wodorostów), <i>chueotang</i> (zupa rybna z kózki) i <i>dwaejigukbap</i> (zupa z ryżem i wieprzowiną).</li>
+</ul>
 <p>4-1. 뜨끈한 국밥에 밥을 말아 든든하게 배를 채우면</p>
 <p>4-2. 몸도 따듯해지는 느낌이 들어 이맘때 더욱 생각이 난다.</p>
+<ul>
+	<li>Szczególnie teraz robi nam się ciepło na samą myśl o brzuszku wypełnionym gorącą zupą z ryżem.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -79,11 +94,26 @@
 <h3>번역</h3>
 
 <p>5. 국밥을 먹으면 한식으로 건강하게 한 끼를 해결했다는 느낌도 든다.</p>
+<ul>
+	<li>Gdy jemy zupę z ryżem, to mamy poczucie, że spożyliśmy pełny, zdrowy koreański posiłek.</li>
+</ul>
 <p>6-1. 하지만 국물에 밥을 말아 먹는 것과 국, 탕이 있는 식사를 자주 하는 사람들은</p>
 <p>6-2. 건강에 적신호가 켜질 수 있다고 전문가들은 경고한다.</p>
+<ul>
+	<li>Eksperci ostrzegają jednak o ryzyku ciążącym na osobach, które często jedzą różne zupy, a także dodają do nich ryż.</li>
+</ul>
 <p>7-1. 짜게 먹을수록 소변을 통해 배출되는 칼슘의 양이 늘어나 골밀도가 떨어지고,</p>
+<ul>
+	<li>Im więcej soli w jedzeniu, tym większa ilość wydalanego wapna w moczu oraz spadek gęstości kości,</li>
+</ul>
 <p>7-2. 혈압이 높아져 고혈압 발병 위험을 높이는 것이다.</p>
+<ul>
+	<li>a także zwiększone zagrożenie wystąpienia nadciśnienia.</li>
+</ul>
 <p>8. 신장, 심혈관질환, 위 등 다른 장기에도 악영향을 미치기 때문이다.</p>
+<ul>
+	<li>Sól ma również negatywny wpływ na nerki, układ krążenia, żołądek oraz pozostałe organy wewnętrzne.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -122,6 +152,9 @@
 <h3>번역</h3>
 
 <p>9. 구체적으로 소금을 많이 먹을수록 심근경색 등 심혈관질환이 높아지게 된다.</p>
+<ul>
+	<li>Konkretnie mówiąc, im więcej spożywa się soli, tym bardziej wzrasta prawdopodobieństwo wystąpienia chorób układu krążenia, w tym zawału serca.</li>
+</ul>
 <p>10. 또 소변이 내려가는 길에 돌이 생기는 요로결석이 생길 수 있다.</p>
 <p>11. 또한 소금은 대표적인 위암 유발 요인 인자 중에 하나로, 헬리코박터균의 발암 작용을 촉진시킨다.</p>
 <p>12-1. 소금 과다 섭취로 위 속 나트륨 농도가 증가하면</p>
@@ -158,6 +191,9 @@
 
 <p>14-1. 하지만 한국인들은 국, 탕에 밥을 말아먹는 습관과 김치나 젓갈과 같은 염장 음식들을 같이 먹는 특성이 있어</p>
 <p>14-2. WTO(세계보건기구)가 권고하는 하루 소금 섭취량보다 더 많이 먹고 있다.</p>
+
+<h2 class="homework">Praca domowa</h2>
+
 <p>15-1. 실제 2021년 기준으로 한국인들의 평균 소금섭취량은 8.1g(약 1.5작은술)인데</p>
 <p>15-2. WTO섭취 권장량은 5g(1작은술) 미만이다.</p>
 <p>16. 이미 권장량의 1.5배가 넘는 양을 매일 먹고 있는 것이다.</p>
@@ -165,6 +201,8 @@
 <p>17-2. 의외로 소금을 많이 먹게 되는 경우도 많다.</p>
 <p>18-1. 매일 먹는 음식에 소금이 녹아 있는 것과 같이</p>
 <p>18-2. 하루에 얼마큼 나트륨 섭취를 하고 있는지 계산하기 힘들기 때문이다.</p>
+
+<hr class="homework">
 
 <h2>Źródło:</h2>
 
