--- a/uj/zajecia/24-25z/wats3-2/zajecia/8/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/8/index.html
@@ -36,9 +36,21 @@
 <h3>번역</h3>
 
 <p>0. 전국 첫 고교 e스포츠부 "새 역사 만든다"</p>
+<ul>
+	<li>„Właśnie tworzymy historię” - pierwsza licealna sekcja e-sportowa w Korei</li>
+</ul>
 <p>1. 광주공업고등학교가 전국에서 처음으로 고교 e스포츠 운동부를 창단했다.</p>
+<ul>
+	<li>Technikum w Gwangju jako pierwsze w kraju stworzyło sekcję e-sportową.</li>
+</ul>
 <p>2. 오명훈 담당 교사와 강지원 코치가 미래 e스포츠 선수를 꿈꾸는 10명의 학생들을 지도한다.</p>
+<ul>
+	<li>Wychowawca Oh Myeonghun wraz trenerem Kang Jiwonem prowadzą 10 uczniów, których marzeniem jest zostanie w przyszłości e-sportowcami.</li>
+</ul>
 <p>3. 이들의 훈련은 매주 월화수목 오후 4시부터 6시까지 2시간 동안 진행된다.</p>
+<ul>
+	<li>Trenują oni przez 2 godziny od 16 do 18 w każdym tygodniu od poniedziałku do czwartku.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -60,10 +72,22 @@
 <h3>번역</h3>
 
 <p>4-1. 지난 9월 창단된 광주공고 e스포츠 팀은 리그오브레전드(LOL)라는 게임을 주축으로 하며,</p>
+<ul>
+	<li>Założona we wrześniu w technikum sekcja e-sportowa skupia się na grze w League of Legends (LoL)</li>
+</ul>
 <p>4-2. 1학년 5명, 2학년 5명으로 총 10명으로 구성돼 있다.</p>
+<ul>
+	<li>i składa się w sumie z 10 uczniów, w tym 5 uczniów z 1 klasy oraz 5 uczniów z 2 klasy.</li>
+</ul>
 <p>5-1. 리그오브레전드는 2023 항저우 아시안게임에서도 최초로 정식종목으로 되며,</p>
 <p>5-2. 전 세계적으로 인기를 끌고 있는 게임이다.</p>
+<ul>
+	<li>League of Legends to gra ciesząca się popularnością na całym świecie, która jako pierwsza gra komputerowa została wybrana na oficjalną dyscyplinę podczas Igrzysk Azjatyckich w Hangzhou w 2023 roku.</li>
+</ul>
 <p>6. e스포츠는 정식 종목으로 채택된 것을 계기로 학교 체육에 적극 도입된 것이다.</p>
+<ul>
+	<li>Przy tej okazji e-sport został entuzjastycznie włączony do lekcji wychowania fizycznego w szkołach.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -84,9 +108,21 @@
 <h3>번역</h3>
 
 <p>7-1. 광주시교육청은 학생들을 좀 더 체계적으로 지원해주고</p>
+<ul>
+	<li>Kuratorium w Gwangju zaczęło bardziej regularnie wspierać uczniów,</li>
+</ul>
 <p>7-2. 학교에 창단지원금 1천만원씩을 전달하기도 했다.</p>
+<ul>
+	<li>a także przekazało szkole 10 mln wonów na utworzenie sekcji.</li>
+</ul>
 <p>8-1. 이 덕분에 방과 후 학교 지원사업으로 장비 등을 지원받던 교내 e스포츠팀들은</p>
+<ul>
+	<li>Dzięki temu uczniowskie drużyny e-sportowe, które wcześniej otrzymywały wsparcie w formie wyposażenia w ramach projektów pozalekcyjnych,</li>
+</ul>
 <p>8-2. e스포츠부 창단을 계기로 일반 운동부와 같은 지원을 받게 됐다.</p>
+<ul>
+	<li>od chwili utworzenia sekcji e-sportowych będą wspierane na takim samym poziomie, jak tradycyjne sekcje sportowe.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -110,10 +146,27 @@
 <h3>번역</h3>
 
 <p>9-1. 주장 조수원(18)은 “처음 e스포츠부를 시작했을 때는 친구들과 함께 ‘호기심’에서 비롯됐지만,</p>
+<ul>
+	<li>Jo Suwon (18 l.), kapitan zespołu, stwierdził: „gdy z kolegami tworzyliśmy sekcję e-sportową, robiliśmy to z czystej ciekawości,</li>
+</ul>
 <p>9-2. 어느 순간부터 욕심도 생기고 목표도 생기게 되었다”며</p>
+<ul>
+	<li>jednak od pewnego momentu pojawiły się również żądza zwycięstwa i jasny cel”</li>
+</ul>
 <p>9-3. “개인적으로 e스포츠 세계 최고 스타인 ‘페이커’ 이상혁 선수를 가장 좋아한다.</p>
+<ul>
+	<li>oraz: „osobiście najbardziej lubię Lee »Fakera« Sang-hyeoka, który jest największą gwiazdą e-sportu na świecie.</li>
+</ul>
 <p>10-1. 그는 국내 e스포츠 분야에 새로운 역사를 써냈으며,</p>
+<ul>
+	<li>Napisał on nową historię w koreańskim e-sporcie,</li>
+</ul>
 <p>10-2. 역대 커리어를 작성해낸 선수로 존경한다”고 말했다.</p>
+<ul>
+	<li>a także osiągnął największy sukces w historii. Z tego powodu darzę go szacunkiem jako zawodnika.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
@@ -134,6 +187,8 @@
 <p>11-2. “강지원 코치님께서 매주 월요일마다 팀 전술과 한 학생들마다 특성을 알려주신다.</p>
 <p>12-1. 이제는 각자 목표 티어(마스터)도 생겼고</p>
 <p>12-2. 올해 대회 우승을 목표로 잡고 있다”고 말했다.</p>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
